--- a/templates/usersprogram.html
+++ b/templates/usersprogram.html
@@ -33,6 +33,7 @@
     <p> Tämän treenin sarjat: </p>
     <input type="text" name="newsets"</p>
     <input type="submit" value="Lähetä">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
     </div>
   </div>
